# cmangos-mangostool

./: .gitignore  CMakeLists.txt  README.md
src/: MangosToolModule.cpp  MangosToolModule.h  MangosToolModuleConfig.cpp  MangosToolModuleConfig.h  MangostoolModule.h  MangostoolModuleConfig.h  mangostool.conf.dist.in
